--- a/res/layout/photo_profile_layout.xml
+++ b/res/layout/photo_profile_layout.xml
@@ -1,214 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:background="#333333"
-    >
-   <!-- header --> 
-<RelativeLayout 
-    android:id="@+id/header_layout"
-     android:layout_width="match_parent"
-     android:layout_height="100dip" 
-     android:padding="3dip"
-     android:layout_alignParentTop="true"
-    >
-    <ImageView 
-        android:id="@+id/profile_head_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/default_avatar"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="5dip"
-        />
+    android:layout_height="match_parent"
+    android:background="@color/text_color_black"
+    android:orientation="vertical" >
+
+    <include layout="@layout/common_title"/>
     
-    <TextView 
-         android:id="@+id/profile_username"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:textColor="#999999"
-         android:text="USERNAME"
-         android:textSize="18sp"
-         android:layout_toRightOf="@+id/profile_head_img"
-         android:layout_alignParentTop="true"
-        />
-     <TextView 
-         android:id="@+id/profile_introduce"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:textColor="#999999"
-         android:text="Here lives a little monster,Here lives a\n little monster Here lives a little monster"
-         android:layout_toRightOf="@+id/profile_head_img"
-         android:layout_below="@+id/profile_username"
-         android:maxLines="2"
-        />
-     <Button 
-       android:id="@+id/followbtn"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentRight="true"
-	   android:layout_alignParentBottom="true"
-       android:text="FOLLOW"
-       android:textColor="#ffffff"
-       android:textStyle="bold"
-       android:background="@drawable/button_redbg"
-       android:layout_marginRight="10dip"
-       />
-     <RelativeLayout 
-          android:layout_width="fill_parent"
-         android:layout_height="fill_parent"
-         android:layout_toRightOf="@+id/profile_head_img"
-         android:layout_toLeftOf="@+id/followbtn"
-         android:layout_below="@+id/profile_introduce"
-         android:layout_alignParentBottom="true"
-         android:gravity="left|bottom"
-         >
-         <TextView 
-             android:id="@+id/follower_number"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="120"
-             android:textColor="#ffffff"
-             />
-         <TextView 
-             android:id="@+id/followertext"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Followers"
-             android:textColor="#ff0000"
-             android:layout_below="@+id/follower_number"
-             />
-         <TextView 
-             android:id="@+id/line"
-             android:layout_width="2dip"
-             android:layout_height="30dip"
-             android:layout_toRightOf="@+id/followertext"
-             android:layout_marginLeft="5dip"
-             android:background="#ff0000"
-             />
-         
-         <TextView 
-             android:id="@+id/followering_number"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="100"
-             android:textColor="#ffffff"
-             android:layout_toRightOf="@+id/line"
-             android:layout_marginLeft="10dip"
-             />
-         <TextView 
-             android:id="@+id/followeringtext"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Following"
-             android:textColor="#ff0000"
-             android:layout_below="@+id/followering_number"
-             android:layout_toRightOf="@+id/line"
-             android:layout_marginLeft="10dip"
-             />
-     </RelativeLayout>
-</RelativeLayout>
-<!-- radio group -->
-<RelativeLayout 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_below="@+id/header_layout"
-    android:gravity="left|top"
-    android:layout_marginTop="5dip"
-    >
-    <RadioGroup 
-        android:id="@+id/radio_btns_group"
-        android:layout_alignParentTop="true"
-        android:layout_width="fill_parent"
-        android:layout_height="50dip"
-        android:orientation="horizontal"
-        android:background="@drawable/profile_tabs"
-        >
-        <RadioButton 
-            android:id="@+id/mastry_radio"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:background="@drawable/selector_tab"
-            android:button="@null"
-            android:checked="true"
-            android:text="MASTRY"
-            android:textColor="#ffffff"
+    <!-- header -->
+    <RelativeLayout
+        android:id="@+id/header_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dip" >
+
+        <ImageView
+            android:id="@+id/profile_head_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="16dp"
+            android:padding="1dp"
+            android:background="@drawable/round_rect_with_boder"
+            android:src="@drawable/dummy_profile_photo"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/profile_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/profile_head_img"
+            android:text="USERNAME"
+            android:textColor="#999999"
             android:textSize="18sp"
-            android:gravity="center"
-            android:singleLine="true"
-            />
-        <RadioButton 
-            android:id="@+id/archieved_radio"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/profile_introduce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profile_username"
+            android:layout_toRightOf="@+id/profile_head_img"
+            android:maxLines="2"
+            android:text="Here lives a little monster,Here lives a\n little monster Here lives a little monster"
+            android:textColor="#999999" />
+
+        <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:background="@drawable/selector_tab"
-            android:button="@null"
-            android:text="ARCHIEVED"
-            android:textColor="#ffffff"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:singleLine="true"
-            />
-        <RadioButton 
-            android:id="@+id/chalenging_radio"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:background="@drawable/selector_tab"
-            android:button="@null"
-             android:text="CHALLENG"
-            android:textColor="#ffffff"
-            android:textSize="18sp"
-            android:gravity="center"
-            android:singleLine="true"
-            />
-    </RadioGroup>
-    <!-- context  -->
-    <RelativeLayout 
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/radio_btns_group"
-        >
-        <GridView 
-            android:id="@+id/mastry_grid"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            >
-        </GridView>
-        
-        <GridView 
-            android:id="@+id/archieve_grid"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:visibility="gone"
-            >
-        </GridView>
-        
-        
-        <GridView 
-            android:id="@+id/challeng_grid"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:visibility="gone"
-            >
-        </GridView>
-        
-        <RelativeLayout 
-            android:id="@+id/archieve_tips"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:visibility="gone"
-            >
-            <ImageView 
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/profile_introduce"
+            android:layout_toRightOf="@+id/profile_head_img"
+            android:gravity="center_vertical" >
+
+            <LinearLayout android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/follower_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="120"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/followertext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/follower_number"
+                    android:text="Followers"
+                    android:textColor="#ee5458" />
+                
+            </LinearLayout>
+            
+            <TextView
+                android:id="@+id/line"
+                android:layout_width="0.5dp"
+                android:layout_height="fill_parent"
+                android:layout_marginLeft="10dip"
+                android:layout_marginRight="10dip"
+                android:background="#ee5458" />
+            
+            <LinearLayout android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                
+                <TextView
+                    android:id="@+id/followering_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/line"
+                    android:text="100"
+                    android:textColor="#ffffff" />
+
+                <TextView
+                    android:id="@+id/followeringtext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/followering_number"
+                    android:layout_toRightOf="@+id/line"
+                    android:text="Following"
+                    android:textColor="#ee5458" />
+
+            </LinearLayout>
+            
+            <View android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1" />
+            
+            <Button
+                android:id="@+id/followbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/profile_discover"
-                android:layout_centerInParent="true"
-                />
+                android:background="@drawable/btn_follow_normal" />
+            
+        </LinearLayout>
+    </RelativeLayout>
+    
+    <!-- radio group -->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/header_layout"
+        android:layout_marginTop="5dip"
+        android:gravity="left|top" >
+
+        <RadioGroup
+            android:id="@+id/radio_btns_group"
+            android:layout_width="fill_parent"
+            android:layout_height="50dip"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/profile_tabs"
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:id="@+id/mastry_radio"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:background="@drawable/selector_tab"
+                android:button="@null"
+                android:checked="true"
+                android:gravity="center"
+                android:singleLine="true"
+                android:drawableTop="@drawable/achived_icon"
+                android:text="10"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
+
+            <RadioButton
+                android:id="@+id/archieved_radio"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:background="@drawable/selector_tab"
+                android:button="@null"
+                android:gravity="center"
+                android:singleLine="true"
+                android:drawableTop="@drawable/achived_icon"
+                android:text="100"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
+
+            <RadioButton
+                android:id="@+id/chalenging_radio"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:background="@drawable/selector_tab"
+                android:button="@null"
+                android:gravity="center"
+                android:singleLine="true"
+                android:drawableTop="@drawable/achived_icon"
+                android:text="100"
+                android:textColor="#ffffff"
+                android:textSize="14sp" />
+        </RadioGroup>
+        
+        <!-- context -->
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/radio_btns_group" >
+
+            <GridView
+                android:id="@+id/mastry_grid"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:numColumns="2"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp" >
+            </GridView>
+
+            <GridView
+                android:id="@+id/archieve_grid"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:numColumns="2"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp"
+                android:visibility="gone" >
+            </GridView>
+
+            <GridView
+                android:id="@+id/challeng_grid"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:visibility="gone"
+                android:numColumns="2"
+                android:verticalSpacing="10dp"
+                android:horizontalSpacing="10dp" >
+            </GridView>
+
+            <RelativeLayout
+                android:id="@+id/archieve_tips"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:visibility="gone" >
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/profile_discover" />
+            </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
-</RelativeLayout>
-</RelativeLayout>
+
+</LinearLayout>
