--- a/res/layout/create_photo.xml
+++ b/res/layout/create_photo.xml
@@ -1,186 +1,159 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"    android:gravity="center_horizontal" 
-    android:background="#ffffff"
-    android:orientation="vertical"
-    >
-    <include layout="@layout/action_bar_title"
-        android:id="@+id/head_layout"
-        android:layout_alignParentTop="true"
-        />  
-     
-     <LinearLayout 
-         android:layout_below="@+id/head_layout"
-         android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal" 
-    android:background="#ffffff"
-    android:orientation="vertical"
-         >
-     <LinearLayout
-         android:layout_width="fill_parent"
-         android:layout_height="100dip"
-         android:orientation="vertical"
-         android:paddingTop="20dip"
-         android:layout_weight="2"	
-         android:layout_marginLeft="15dip"
-         android:layout_marginRight="15dip"
-         android:background="@drawable/bg_achievement_detail"
-     >
-      <TextView
-        android:id="@+id/input_photo_title"
+    android:layout_height="match_parent"	android:orientation="vertical"
+    android:background="@color/background" >
+
+    <include layout="@layout/common_title" />
+
+    <LinearLayout
+        android:id="@+id/intro_info"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#00000000"
-        android:textColor="#ffffff"
-        android:text="testest testetst testetst testetst testetst testetst testetst"
-        android:gravity="left|top"
-     />
-     </LinearLayout>
-     <LinearLayout
-         android:id="@+id/input_title_layout"
-         android:layout_width="wrap_content"
-         android:layout_height="0dip"
-         android:orientation="vertical"
-         android:layout_weight="2"
-     >
-    
-     </LinearLayout>
-     <LinearLayout
-     	android:id="@+id/photo_layout"
+        android:layout_height="100dip"
+        android:background="@drawable/bg_achievement_detail"
+        android:orientation="vertical"
+        android:paddingTop="20dip" >
+
+        <TextView
+            android:id="@+id/input_photo_title"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="#00000000"
+            android:gravity="left|top"
+            android:text="testest testetst testetst testetst testetst testetst testetst"
+            android:textColor="#ffffff" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/photo_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="5"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12.5dp"
         android:gravity="center"
-     >
+        android:orientation="horizontal" >
+
         <ImageView
             android:id="@+id/take_photo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/post_takephoto"
-        />
+            android:src="@drawable/post_takephoto" />
+
         <ImageView
             android:id="@+id/upload_photo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/post_upload"
             android:layout_marginLeft="20dip"
-        />
+            android:src="@drawable/post_upload" />
+
         <ImageView
             android:id="@+id/back_photo_show"
             android:layout_width="match_parent"
             android:layout_height="200dip"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
             android:background="@drawable/frame"
-        />
-     </LinearLayout>
-     <RelativeLayout
-        android:layout_width="fill_parent"
+            android:scaleType="fitCenter"
+            android:visibility="gone" />
+    </LinearLayout>
+        
+    <TextView
+        android:id="@+id/words_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
-     >
-        <TextView
-         android:id="@+id/words_text"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignParentTop="true"
-         android:layout_alignParentRight="true"
-         android:text="140 words left"
-         />
-        <EditText
-            android:id="@+id/input_photo_comments"
-            android:layout_width="fill_parent"
-            android:layout_height="80dip"
-            android:layout_below="@+id/words_text"
-            android:background="@drawable/input_post_text_sm"
-            android:padding="10dip"
-            android:hint="input description"
-            android:lines="4"
-            android:gravity="left|top"
-            android:layout_marginBottom="5dip"
-            android:layout_marginLeft="15dip"
-            android:layout_marginRight="15dip"
-         />
-            <RadioGroup
-                android:id="@+id/radioGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_below="@+id/input_photo_comments"
-                android:layout_marginLeft="15dip"
-                android:gravity="left|top"
-                >
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="12dip"
+        android:layout_marginRight="12dip"
+        android:layout_gravity="right"
+        android:text="140 words left" />
 
-                <RadioButton
-                    android:id="@+id/location_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:button="@drawable/post_facebook"
-                    >
-                </RadioButton>
-
-                <RadioButton
-                    android:id="@+id/tag_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:button="@drawable/post_twitter"
-                    >
-                </RadioButton>
-             </RadioGroup>
-     </RelativeLayout>
-     <RelativeLayout
-         android:layout_width="wrap_content"
-         android:layout_height="0dip"
-         android:gravity="center"
-         android:layout_weight="2"
-     >
-     <ImageView
-            android:id="@+id/create_btn"
-            android:layout_width="280dip"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:src="@drawable/post_publish"
-            android:layout_marginBottom="10dip"
+    <EditText
+        android:id="@+id/input_photo_comments"
+        android:layout_width="fill_parent"
+        android:layout_height="63.5dp"
+        android:layout_marginLeft="12dip"
+        android:layout_marginRight="12dip"
+        android:background="@drawable/round_rect_with_boder"
+        android:gravity="left|top"
+        android:hint="input description"
+        android:padding="10dip" />
+    
+    <TextView android:id="@+id/location"
+        android:layout_width="fill_parent"
+        android:layout_height="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="12dip"
+        android:layout_marginRight="12dip"
+        android:drawableLeft="@drawable/icon_location_red"
+        android:drawablePadding="6dp"
+        android:text="Tokyo, Japan"
+        android:textSize="12sp"
+        android:textColor="#666666"
+        android:background="@color/black"
         />
-      <ImageView 
+    
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="12dip"
+        android:layout_marginRight="12dip"
+        android:orientation="horizontal" >
+
+        <RadioButton
+            android:id="@+id/location_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:button="@drawable/post_facebook" >
+        </RadioButton>
+
+        <RadioButton
+            android:id="@+id/tag_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:button="@drawable/post_twitter"
+            android:checked="true" >
+        </RadioButton>
+    </RadioGroup>
+    
+    <ImageView
+        android:id="@+id/create_btn"
+        android:layout_width="280dip"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/post_publish"
+        android:gravity="center" />
+    
+    <ImageView
         android:id="@+id/guide_hand_post"
-        	android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image_guide_hand"
-            android:visibility="gone"
-            android:layout_centerInParent="true"
-        />
-     </RelativeLayout>
-     </LinearLayout>
-     <!-- guide -->
-     <RelativeLayout 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/image_guide_hand"
+        android:visibility="gone" />
+
+    <!-- guide -->
+    <RelativeLayout
         android:id="@+id/guide_layer"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="#a9000000"
-        android:visibility="gone"
-        >
-    <ImageView 
-        android:id="@+id/guide_hand"
-        	android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image_guide_hand"
-            android:layout_centerInParent="true"
-        />
-        <ImageView 
+        android:visibility="gone" >
+
+        <ImageView
+            android:id="@+id/guide_hand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/guide_click_home_item"
+            android:layout_centerInParent="true"
+            android:src="@drawable/image_guide_hand" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="80dip"
-            />
+            android:src="@drawable/guide_click_home_item" />
     </RelativeLayout>
-</RelativeLayout>
 
-
-
-
-
+</LinearLayout>
