--- a/res/layout/notf_list_item.xml
+++ b/res/layout/notf_list_item.xml
@@ -1,54 +1,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    >
+    android:background="@color/white" >
+
     <ImageView
         android:id="@+id/notf_user_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_margin="10dip"
         android:layout_centerVertical="true"
-        android:src="@drawable/default_avatar"
-    />
-   
-    <LinearLayout
-    	android:id="@+id/notf_name_layout"
-    	android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:layout_toRightOf="@+id/notf_user_picture"
-    	android:orientation="horizontal">
+        android:layout_margin="10dip"
+        android:background="@drawable/round_rect_with_boder"
+        android:src="@drawable/dummy_notification_userphoto" />
 
-         <TextView
+    <LinearLayout
+        android:id="@+id/notf_name_layout"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_toRightOf="@+id/notf_user_picture"
+        android:orientation="vertical"
+        android:gravity="center_vertical" >
+
+        <TextView
             android:id="@+id/notf_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-        />
+            android:text="hello, every one!" />
+
         <TextView
             android:id="@+id/notf_other_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="5dip"
-        />
+            android:text="you are who" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/notf_times"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/notf_user_picture"
-        android:paddingLeft="5dip" />
+        android:paddingLeft="5dip"
+        android:textColor="#999999"
+        android:text="2014.01.21" />
 
 </RelativeLayout>
-
-
-
-
-
-
-
-
-
-
-
