--- a/res/layout/notifications.xml
+++ b/res/layout/notifications.xml
@@ -1,16 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:background="#ffffff"
-	android:orientation="vertical" >
-	<include layout="@layout/action_bar_title"/>
-     <ListView
-         android:id="@+id/notf_info_list"
-         android:layout_width="fill_parent"
-         android:layout_height="wrap_content"
-         android:cacheColorHint="#00000000"
-         android:dividerHeight="1dip"
-         android:divider="#999999"
-     />
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/background"
+    android:orientation="vertical" >
+
+    <include layout="@layout/common_title" />
+
+    <ListView
+        android:id="@+id/notf_info_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="@null"
+        android:divider="#ee5410"
+        android:dividerHeight="1dip" />
 
 </LinearLayout>
