--- a/res/layout/single_album_main.xml
+++ b/res/layout/single_album_main.xml
@@ -1,31 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <RelativeLayout android:id="@id/topbar" android:background="@drawable/bg_view_topmenubackgroundpic_a" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
-        <Button android:textSize="@dimen/text_size_common" 
-            android:textColor="@android:color/white" 
-            android:id="@id/btn_back" 
-            android:background="@drawable/btn_top_back" 
-            android:paddingLeft="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" 
-            android:layout_marginLeft="10.0dip" android:text="home" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
-        <Button android:textSize="@dimen/text_size_common" android:textColor="@color/white" 
-                android:id="@id/btn_cancel"                android:background="@drawable/btn_square_short" 
-                android:gravity="center"                   android:layout_width="wrap_content" 
-                android:layout_height="wrap_content"       android:layout_marginRight="10.0dip" 
-                android:text="@string/cancel"              android:layout_alignParentRight="true" 
-                android:layout_centerVertical="true"
-                android:paddingLeft="2.0dip"  android:paddingRight="2.0dip" />
-        <TextView android:textSize="20.0dip" android:textStyle="bold" 
-            android:textColor="@android:color/white" android:gravity="center" 
-            android:id="@id/album_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_album" android:maxEms="6" android:singleLine="true" android:layout_centerInParent="true" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <RelativeLayout
+        android:id="@id/topbar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/bg_view_topmenubackgroundpic_a" >
+
+        <Button
+            android:id="@id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10.0dip"
+            android:background="@drawable/btn_top_back"
+            android:paddingLeft="7.0dip"
+            android:text="home"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/text_size_common" />
+
+        <Button
+            android:id="@id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10.0dip"
+            android:background="@drawable/btn_square_short"
+            android:gravity="center"
+            android:paddingLeft="2.0dip"
+            android:paddingRight="2.0dip"
+            android:text="@string/cancel"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_size_common" />
+
+        <TextView
+            android:id="@id/album_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:maxEms="6"
+            android:singleLine="true"
+            android:text="@string/select_album"
+            android:textColor="@android:color/white"
+            android:textSize="20.0dip"
+            android:textStyle="bold" />
     </RelativeLayout>
-    <FrameLayout android:id="@id/album_content" 
-        android:layout_width="fill_parent" 
-        android:layout_height="fill_parent" 
-        android:layout_above="@id/album_selector" 
+
+    <FrameLayout
+        android:id="@+id/album_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_below="@id/topbar" >
-         <include layout="@layout/album_grid"/>
-         <include layout="@layout/album_list" />
+
+        <include layout="@layout/album_grid" />
+
+        <include layout="@layout/album_list" />
     </FrameLayout>
-    
+
 </RelativeLayout>
