--- a/res/layout/sliding_menu.xml
+++ b/res/layout/sliding_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/btn_menu_bg"
@@ -23,13 +24,14 @@
             android:textSize="18sp"
             android:gravity="center" />
 
-        <TextView
+        <com.photowall.widget.typeface.TypefaceTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="6dp"
             android:text="NOTIFICATIONS"
             android:textColor="#ee5458"
-            android:textSize="18sp" />
+            android:textSize="16sp"
+            geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
 
     </LinearLayout>
     
@@ -46,13 +48,14 @@
         android:orientation="vertical"
         android:background="@drawable/menu_username_bg" >
         
-        <TextView
+        <com.photowall.widget.typeface.TypefaceTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="LEGEND.OF"
             android:textColor="#fefefe"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
 		
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -90,7 +93,7 @@
         android:background="@drawable/menu_home_bg"
         android:paddingLeft="12dp" >
         
-        <TextView
+        <com.photowall.widget.typeface.TypefaceTextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -98,7 +101,8 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:gravity="center_vertical"
-            android:paddingLeft="50dp" />
+            android:paddingLeft="50dp"
+            geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
         
     </LinearLayout>
 
@@ -109,7 +113,7 @@
         android:background="@drawable/menu_explorer_bg"
         android:paddingLeft="12dp" >
         
-        <TextView
+        <com.photowall.widget.typeface.TypefaceTextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -117,7 +121,8 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:gravity="center_vertical"
-            android:paddingLeft="50dp" />
+            android:paddingLeft="50dp"
+            geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
         
     </LinearLayout>
     
@@ -137,7 +142,7 @@
         android:background="@drawable/menu_feedback_bg"
         android:paddingLeft="12dp" >
         
-        <TextView
+        <com.photowall.widget.typeface.TypefaceTextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -145,7 +150,8 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:gravity="center_vertical"
-            android:paddingLeft="50dp" />
+            android:paddingLeft="50dp"
+            geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
         
     </LinearLayout>
 </LinearLayout>
