--- a/res/layout/tiled_gridview_fragment.xml
+++ b/res/layout/tiled_gridview_fragment.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#ffffff"    
+    android:background="@color/window_background"    
     android:orientation="vertical" >
 
     <GridView
