--- a/res/layout/viewpager_fragment.xml
+++ b/res/layout/viewpager_fragment.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    >
-    
-<com.viewpagerindicator.TitlePageIndicator
+    android:layout_height="match_parent"
+    android:background="@color/window_background" >
+
+    <com.viewpagerindicator.TitlePageIndicator
         android:id="@+id/indicator"
-        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:layout_alignParentTop="true"
-        />
-<android.support.v4.view.ViewPager
+        android:layout_height="30dp"
+        android:layout_alignParentTop="true" />
+
+    <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_below="@+id/indicator"
-        />
+        android:layout_gravity="center" />
+
 </RelativeLayout>
